--- a/css/explore.css
+++ b/css/explore.css
@@ -2,7 +2,7 @@
 
 @import url("../css/variables.css");
 
-#explore-link {
+#explore-link, #explore-link-2 {
     text-decoration: underline;
 }
 
